fixed the side bar spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3215,8 +3215,8 @@
 /* Sidebar */
 
 	#sidebar {
-		margin-right: 3em;
-		min-width: 22em;
+		margin-right: 4em;
+		min-width: 15em;
 		width: 22em;
 	}
 
